KAKEULGAE-66 컨트롤러 작성