@@ -62,12 +62,11 @@ dependencies {
     runtimeOnly 'com.h2database:h2'
 }
 
-//clean후 빌드시, STR.이라고 되어있는 부분 빌드 에러뜨면 여기서부터 주석처리
 def generated = 'src/main/generated'
 
 
 sourceSets {
-    main.java.srcDir generated
+    main.java.srcDir generated // for generated files
 }
 
 
@@ -77,11 +76,6 @@ configurations {
     }
     querydsl.extendsFrom compileClasspath
 }
-
-//tasks.named('test') {//
-//    useJUnitPlatform()
-//    jvmArgs(['--enable-preview'])
-//}
 
 tasks.withType(JavaCompile).configureEach {
     options.compilerArgs << '-parameters'
